Fix for image size on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,11 @@ section {
     border: none;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 @media only screen and (max-width: 600px) {
 
     .text-content {
